lpg/Parser/scan-ops_pddl.output
Nonterminals useless in grammar

   variable_star
   timed_adl_effect_plus


Rules useless in grammar

  172 variable_star: /* empty */
  173              | VARIABLE variable_star

  174 timed_adl_effect_plus: timed_adl_effect
  175                      | timed_adl_effect timed_adl_effect_plus


Rules useless in parser due to conflicts

  152 binary_op: MINUS_TOK

  168 d_value: num_exp


State 102 conflicts: 1 reduce/reduce
State 137 conflicts: 1 shift/reduce
State 149 conflicts: 7 reduce/reduce
State 212 conflicts: 2 shift/reduce
State 213 conflicts: 2 shift/reduce
State 236 conflicts: 3 shift/reduce
State 238 conflicts: 4 shift/reduce
State 240 conflicts: 3 shift/reduce
State 242 conflicts: 3 shift/reduce
State 309 conflicts: 1 reduce/reduce
State 356 conflicts: 4 shift/reduce
State 357 conflicts: 5 shift/reduce
State 358 conflicts: 4 shift/reduce
State 359 conflicts: 4 shift/reduce
State 369 conflicts: 1 shift/reduce
State 374 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 $@1: /* empty */

    2 file: $@1 domain_definition

    3 $@2: /* empty */

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name $@2 optional_domain_defs

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME CLOSE_PAREN

    6 optional_domain_defs: CLOSE_PAREN
    7                     | require_def optional_domain_defs
    8                     | constants_def optional_domain_defs
    9                     | types_def optional_domain_defs
   10                     | action_def optional_domain_defs
   11                     | predicates_def optional_domain_defs
   12                     | durative_action_def optional_domain_defs
   13                     | functions_def optional_domain_defs
   14                     | derived_def optional_domain_defs

   15 $@3: /* empty */

   16 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list $@3 CLOSE_PAREN

   17 predicates_list: /* empty */

   18 $@4: /* empty */

   19 predicates_list: OPEN_PAREN NAME typed_list_variable CLOSE_PAREN $@4 predicates_list

   20 $@5: /* empty */

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list $@5 CLOSE_PAREN

   22 functions_list: /* empty */

   23 $@6: /* empty */

   24 functions_list: OPEN_PAREN NAME typed_list_variable CLOSE_PAREN $@6 functions_list

   25 $@7: /* empty */

   26 $@8: /* empty */

   27 require_def: OPEN_PAREN REQUIREMENTS_TOK $@7 NAME $@8 require_key_star CLOSE_PAREN

   28 require_key_star: /* empty */

   29 $@9: /* empty */

   30 require_key_star: NAME $@9 require_key_star

   31 $@10: /* empty */

   32 types_def: OPEN_PAREN TYPES_TOK $@10 typed_list_name CLOSE_PAREN

   33 $@11: /* empty */

   34 constants_def: OPEN_PAREN CONSTANTS_TOK $@11 typed_list_name CLOSE_PAREN

   35 $@12: /* empty */

   36 $@13: /* empty */

   37 action_def: OPEN_PAREN ACTION_TOK $@12 NAME $@13 param_def action_def_body CLOSE_PAREN

   38 param_def: /* empty */
   39          | PARAMETERS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN

   40 action_def_body: /* empty */
   41                | VARS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN action_def_body

   42 $@14: /* empty */

   43 action_def_body: PRECONDITION_TOK adl_goal_description $@14 action_def_body

   44 $@15: /* empty */

   45 action_def_body: EFFECT_TOK adl_effect $@15 action_def_body

   46 adl_goal_description: literal_term
   47                     | OPEN_PAREN AND_TOK adl_goal_description_star CLOSE_PAREN
   48                     | OPEN_PAREN OR_TOK adl_goal_description_star CLOSE_PAREN
   49                     | OPEN_PAREN NOT_TOK adl_goal_description CLOSE_PAREN
   50                     | OPEN_PAREN IMPLY_TOK adl_goal_description adl_goal_description CLOSE_PAREN
   51                     | OPEN_PAREN EXISTS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN
   52                     | OPEN_PAREN FORALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN
   53                     | f_comp

   54 f_comp: OPEN_PAREN binary_comp f_exp f_exp CLOSE_PAREN

   55 f_exp: num_exp
   56      | OPEN_PAREN MINUS_TOK f_exp CLOSE_PAREN
   57      | OPEN_PAREN MINUS_TOK f_exp f_exp CLOSE_PAREN
   58      | OPEN_PAREN PLUS_TOK f_exp f_exp CLOSE_PAREN
   59      | OPEN_PAREN MUL_TOK f_exp f_exp CLOSE_PAREN
   60      | OPEN_PAREN DIV_TOK f_exp f_exp CLOSE_PAREN
   61      | f_head
   62      | number

   63 f_head: OPEN_PAREN function_symbol term_star CLOSE_PAREN
   64       | function_symbol

   65 binary_comp: GREATER_TOK
   66            | LESS_THAN_TOK
   67            | EQUAL_TOK
   68            | GREATER_OR_EQUAL_TOK
   69            | LESS_THAN_OR_EQUAL_TOK

   70 num_exp: OPEN_PAREN MINUS_TOK num_exp CLOSE_PAREN
   71        | OPEN_PAREN MINUS_TOK num_exp num_exp CLOSE_PAREN
   72        | OPEN_PAREN PLUS_TOK num_exp num_exp CLOSE_PAREN
   73        | OPEN_PAREN MUL_TOK num_exp num_exp CLOSE_PAREN
   74        | OPEN_PAREN DIV_TOK num_exp num_exp CLOSE_PAREN
   75        | number

   76 number: INTVAL
   77       | FLOATVAL

   78 function_symbol: NAME

   79 assign_op: ASSIGN_TOK
   80          | SCALE_UP_TOK
   81          | SCALE_DOWN_TOK
   82          | INCREASE_TOK
   83          | DECREASE_TOK

   84 adl_goal_description_star: /* empty */
   85                          | adl_goal_description adl_goal_description_star

   86 adl_effect: literal_term
   87           | OPEN_PAREN AND_TOK adl_effect_star CLOSE_PAREN
   88           | OPEN_PAREN FORALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_effect CLOSE_PAREN
   89           | OPEN_PAREN WHEN_TOK adl_goal_description adl_effect CLOSE_PAREN
   90           | OPEN_PAREN assign_op f_head f_exp CLOSE_PAREN

   91 adl_effect_star: /* empty */
   92                | adl_effect adl_effect_star

   93 literal_term: OPEN_PAREN NOT_TOK atomic_formula_term CLOSE_PAREN
   94             | atomic_formula_term

   95 atomic_formula_term: OPEN_PAREN predicate term_star CLOSE_PAREN

   96 term_star: /* empty */
   97          | term term_star

   98 term: NAME
   99     | VARIABLE

  100 name_plus: NAME
  101          | NAME name_plus

  102 predicate: NAME
  103          | EQUAL_TOK

  104 typed_list_name: /* empty */
  105                | NAME either name_plus CLOSE_PAREN typed_list_name
  106                | NAME type typed_list_name
  107                | NAME typed_list_name

  108 typed_list_variable: /* empty */
  109                    | VARIABLE either name_plus CLOSE_PAREN typed_list_variable
  110                    | VARIABLE type typed_list_variable
  111                    | VARIABLE typed_list_variable

  112 $@16: /* empty */

  113 $@17: /* empty */

  114 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK $@16 NAME $@17 param_def durative_action_def_body CLOSE_PAREN

  115 durative_action_def_body: /* empty */
  116                         | VARS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN durative_action_def_body

  117 $@18: /* empty */

  118 durative_action_def_body: DURATION_TOK duration_constraint $@18 durative_action_def_body

  119 $@19: /* empty */

  120 durative_action_def_body: CONDITION_TOK da_adl_goal_description $@19 durative_action_def_body

  121 $@20: /* empty */

  122 durative_action_def_body: EFFECT_TOK da_adl_effect $@20 durative_action_def_body

  123 $@21: /* empty */

  124 derived_def: OPEN_PAREN DERIVED_TOK $@21 derived_predicate_def adl_goal_description CLOSE_PAREN

  125 derived_predicate_def: OPEN_PAREN predicate typed_list_variable CLOSE_PAREN

  126 da_adl_goal_description: timed_adl_goal_description
  127                        | OPEN_PAREN AND_TOK timed_adl_goal_description_plus CLOSE_PAREN

  128 timed_adl_goal_description_plus: timed_adl_goal_description
  129                                | timed_adl_goal_description timed_adl_goal_description_plus

  130 timed_adl_goal_description: OPEN_PAREN AT_START adl_goal_description CLOSE_PAREN
  131                           | OPEN_PAREN AT_END adl_goal_description CLOSE_PAREN
  132                           | OPEN_PAREN OVER_ALL adl_goal_description CLOSE_PAREN

  133 da_adl_effect_star: /* empty */
  134                   | da_adl_effect da_adl_effect_star

  135 da_adl_effect: OPEN_PAREN AND_TOK da_adl_effect_star CLOSE_PAREN
  136              | timed_adl_effect
  137              | OPEN_PAREN FORALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN da_adl_effect CLOSE_PAREN
  138              | OPEN_PAREN WHEN_TOK da_adl_goal_description da_adl_effect CLOSE_PAREN
  139              | OPEN_PAREN assign_op f_head f_exp_da CLOSE_PAREN

  140 timed_adl_effect: OPEN_PAREN AT_START adl_effect CLOSE_PAREN
  141                 | OPEN_PAREN AT_END adl_effect CLOSE_PAREN
  142                 | OPEN_PAREN AT_START f_assign_da CLOSE_PAREN
  143                 | OPEN_PAREN AT_END f_assign_da CLOSE_PAREN
  144                 | OPEN_PAREN INCREASE_TOK f_head f_exp_t CLOSE_PAREN
  145                 | OPEN_PAREN DECREASE_TOK f_head f_exp_t CLOSE_PAREN

  146 f_assign_da: OPEN_PAREN assign_op f_head f_exp_da CLOSE_PAREN

  147 f_exp_da: OPEN_PAREN binary_op f_exp_da f_exp_da CLOSE_PAREN
  148         | OPEN_PAREN MINUS_TOK f_exp_da CLOSE_PAREN
  149         | DURATION_VAR_TOK
  150         | f_exp

  151 binary_op: PLUS_TOK
  152          | MINUS_TOK
  153          | MUL_TOK
  154          | DIV_TOK

  155 f_exp_t: OPEN_PAREN MUL_TOK f_exp TIME_TOK CLOSE_PAREN
  156        | OPEN_PAREN MUL_TOK TIME_TOK f_exp CLOSE_PAREN
  157        | TIME_TOK

  158 duration_constraint: OPEN_PAREN AND_TOK simple_duration_constraint_plus CLOSE_PAREN
  159                    | simple_duration_constraint

  160 simple_duration_constraint_plus: simple_duration_constraint
  161                                | simple_duration_constraint simple_duration_constraint_plus

  162 simple_duration_constraint: OPEN_PAREN d_op DURATION_VAR_TOK d_value CLOSE_PAREN
  163                           | OPEN_PAREN AT_START simple_duration_constraint CLOSE_PAREN
  164                           | OPEN_PAREN AT_END simple_duration_constraint CLOSE_PAREN

  165 d_op: LESS_THAN_OR_EQUAL_TOK
  166     | GREATER_OR_EQUAL_TOK
  167     | EQUAL_TOK

  168 d_value: num_exp
  169        | f_exp

  170 type: MINUS_TOK NAME

  171 either: MINUS_TOK OPEN_PAREN EITHER_TOK


Terminals, with rules where they appear

$end (0) 0
error (256)
DEFINE_TOK (258) 4
DOMAIN_TOK (259) 5
REQUIREMENTS_TOK (260) 27
TYPES_TOK (261) 32
EITHER_TOK (262) 171
CONSTANTS_TOK (263) 34
PREDICATES_TOK (264) 16
FUNCTIONS_TOK (265) 21
DURATIVE_ACTION_TOK (266) 114
CONDITION_TOK (267) 120
DURATION_TOK (268) 118
DURATION_VAR_TOK (269) 149 162
AT_START (270) 130 140 142 163
AT_END (271) 131 141 143 164
OVER_ALL (272) 132
INCREASE_TOK (273) 82 144
DECREASE_TOK (274) 83 145
TIME_TOK (275) 155 156 157
GREATER_OR_EQUAL_TOK (276) 68 166
LESS_THAN_OR_EQUAL_TOK (277) 69 165
INTVAL (278) 76
FLOATVAL (279) 77
ASSIGN_TOK (280) 79
SCALE_UP_TOK (281) 80
SCALE_DOWN_TOK (282) 81
PLUS_TOK (283) 58 72 151
MINUS_TOK (284) 56 57 70 71 148 152 170 171
MUL_TOK (285) 59 73 153 155 156
DIV_TOK (286) 60 74 154
EQUAL_TOK (287) 67 103 167
GREATER_TOK (288) 65
LESS_THAN_TOK (289) 66
ACTION_TOK (290) 37
VARS_TOK (291) 41 116
DERIVED_TOK (292) 124
PRECONDITION_TOK (293) 43
PARAMETERS_TOK (294) 39
EFFECT_TOK (295) 45 122
AND_TOK (296) 47 87 127 135 158
NOT_TOK (297) 49 93
WHEN_TOK (298) 89 138
FORALL_TOK (299) 52 88 137
IMPLY_TOK (300) 50
OR_TOK (301) 48
EXISTS_TOK (302) 51
NAME (303) 5 19 24 27 30 37 78 98 100 101 102 105 106 107 114 170
VARIABLE (304) 99 109 110 111
OPEN_PAREN (305) 4 5 16 19 21 24 27 32 34 37 39 41 47 48 49 50 51 52
    54 56 57 58 59 60 63 70 71 72 73 74 87 88 89 90 93 95 114 116 124
    125 127 130 131 132 135 137 138 139 140 141 142 143 144 145 146
    147 148 155 156 158 162 163 164 171
CLOSE_PAREN (306) 5 6 16 19 21 24 27 32 34 37 39 41 47 48 49 50 51
    52 54 56 57 58 59 60 63 70 71 72 73 74 87 88 89 90 93 95 105 109
    114 116 124 125 127 130 131 132 135 137 138 139 140 141 142 143
    144 145 146 147 148 155 156 158 162 163 164
UMINUS (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
file (54)
    on left: 2, on right: 0
$@1 (55)
    on left: 1, on right: 2
domain_definition (56)
    on left: 4, on right: 2
$@2 (57)
    on left: 3, on right: 4
domain_name (58)
    on left: 5, on right: 4
optional_domain_defs (59)
    on left: 6 7 8 9 10 11 12 13 14, on right: 4 7 8 9 10 11 12 13
    14
predicates_def (60)
    on left: 16, on right: 11
$@3 (61)
    on left: 15, on right: 16
predicates_list (62)
    on left: 17 19, on right: 16 19
$@4 (63)
    on left: 18, on right: 19
functions_def (64)
    on left: 21, on right: 13
$@5 (65)
    on left: 20, on right: 21
functions_list (66)
    on left: 22 24, on right: 21 24
$@6 (67)
    on left: 23, on right: 24
require_def (68)
    on left: 27, on right: 7
$@7 (69)
    on left: 25, on right: 27
$@8 (70)
    on left: 26, on right: 27
require_key_star (71)
    on left: 28 30, on right: 27 30
$@9 (72)
    on left: 29, on right: 30
types_def (73)
    on left: 32, on right: 9
$@10 (74)
    on left: 31, on right: 32
constants_def (75)
    on left: 34, on right: 8
$@11 (76)
    on left: 33, on right: 34
action_def (77)
    on left: 37, on right: 10
$@12 (78)
    on left: 35, on right: 37
$@13 (79)
    on left: 36, on right: 37
param_def (80)
    on left: 38 39, on right: 37 114
action_def_body (81)
    on left: 40 41 43 45, on right: 37 41 43 45
$@14 (82)
    on left: 42, on right: 43
$@15 (83)
    on left: 44, on right: 45
adl_goal_description (84)
    on left: 46 47 48 49 50 51 52 53, on right: 43 49 50 51 52 85 89
    124 130 131 132
f_comp (85)
    on left: 54, on right: 53
f_exp (86)
    on left: 55 56 57 58 59 60 61 62, on right: 54 56 57 58 59 60 90
    150 155 156 169
f_head (87)
    on left: 63 64, on right: 61 90 139 144 145 146
binary_comp (88)
    on left: 65 66 67 68 69, on right: 54
num_exp (89)
    on left: 70 71 72 73 74 75, on right: 55 70 71 72 73 74 168
number (90)
    on left: 76 77, on right: 62 75
function_symbol (91)
    on left: 78, on right: 63 64
assign_op (92)
    on left: 79 80 81 82 83, on right: 90 139 146
adl_goal_description_star (93)
    on left: 84 85, on right: 47 48 85
adl_effect (94)
    on left: 86 87 88 89 90, on right: 45 88 89 92 140 141
adl_effect_star (95)
    on left: 91 92, on right: 87 92
literal_term (96)
    on left: 93 94, on right: 46 86
atomic_formula_term (97)
    on left: 95, on right: 93 94
term_star (98)
    on left: 96 97, on right: 63 95 97
term (99)
    on left: 98 99, on right: 97
name_plus (100)
    on left: 100 101, on right: 101 105 109
predicate (101)
    on left: 102 103, on right: 95 125
typed_list_name (102)
    on left: 104 105 106 107, on right: 32 34 105 106 107
typed_list_variable (103)
    on left: 108 109 110 111, on right: 19 24 39 41 51 52 88 109 110
    111 116 125 137
durative_action_def (104)
    on left: 114, on right: 12
$@16 (105)
    on left: 112, on right: 114
$@17 (106)
    on left: 113, on right: 114
durative_action_def_body (107)
    on left: 115 116 118 120 122, on right: 114 116 118 120 122
$@18 (108)
    on left: 117, on right: 118
$@19 (109)
    on left: 119, on right: 120
$@20 (110)
    on left: 121, on right: 122
derived_def (111)
    on left: 124, on right: 14
$@21 (112)
    on left: 123, on right: 124
derived_predicate_def (113)
    on left: 125, on right: 124
da_adl_goal_description (114)
    on left: 126 127, on right: 120 138
timed_adl_goal_description_plus (115)
    on left: 128 129, on right: 127 129
timed_adl_goal_description (116)
    on left: 130 131 132, on right: 126 128 129
da_adl_effect_star (117)
    on left: 133 134, on right: 134 135
da_adl_effect (118)
    on left: 135 136 137 138 139, on right: 122 134 137 138
timed_adl_effect (119)
    on left: 140 141 142 143 144 145, on right: 136
f_assign_da (120)
    on left: 146, on right: 142 143
f_exp_da (121)
    on left: 147 148 149 150, on right: 139 146 147 148
binary_op (122)
    on left: 151 152 153 154, on right: 147
f_exp_t (123)
    on left: 155 156 157, on right: 144 145
duration_constraint (124)
    on left: 158 159, on right: 118
simple_duration_constraint_plus (125)
    on left: 160 161, on right: 158 161
simple_duration_constraint (126)
    on left: 162 163 164, on right: 159 160 161 163 164
d_op (127)
    on left: 165 166 167, on right: 162
d_value (128)
    on left: 168 169, on right: 162
type (129)
    on left: 170, on right: 106 110
either (130)
    on left: 171, on right: 105 109


state 0

    0 $accept: . file $end

    $default  reduce using rule 1 ($@1)

    file  go to state 1
    $@1   go to state 2


state 1

    0 $accept: file . $end

    $end  shift, and go to state 3


state 2

    2 file: $@1 . domain_definition

    OPEN_PAREN  shift, and go to state 4

    domain_definition  go to state 5


state 3

    0 $accept: file $end .

    $default  accept


state 4

    4 domain_definition: OPEN_PAREN . DEFINE_TOK domain_name $@2 optional_domain_defs

    DEFINE_TOK  shift, and go to state 6


state 5

    2 file: $@1 domain_definition .

    $default  reduce using rule 2 (file)


state 6

    4 domain_definition: OPEN_PAREN DEFINE_TOK . domain_name $@2 optional_domain_defs

    OPEN_PAREN  shift, and go to state 7

    domain_name  go to state 8


state 7

    5 domain_name: OPEN_PAREN . DOMAIN_TOK NAME CLOSE_PAREN

    DOMAIN_TOK  shift, and go to state 9


state 8

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name . $@2 optional_domain_defs

    $default  reduce using rule 3 ($@2)

    $@2  go to state 10


state 9

    5 domain_name: OPEN_PAREN DOMAIN_TOK . NAME CLOSE_PAREN

    NAME  shift, and go to state 11


state 10

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name $@2 . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 14
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 11

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 23


state 12

   16 predicates_def: OPEN_PAREN . PREDICATES_TOK predicates_list $@3 CLOSE_PAREN
   21 functions_def: OPEN_PAREN . FUNCTIONS_TOK functions_list $@5 CLOSE_PAREN
   27 require_def: OPEN_PAREN . REQUIREMENTS_TOK $@7 NAME $@8 require_key_star CLOSE_PAREN
   32 types_def: OPEN_PAREN . TYPES_TOK $@10 typed_list_name CLOSE_PAREN
   34 constants_def: OPEN_PAREN . CONSTANTS_TOK $@11 typed_list_name CLOSE_PAREN
   37 action_def: OPEN_PAREN . ACTION_TOK $@12 NAME $@13 param_def action_def_body CLOSE_PAREN
  114 durative_action_def: OPEN_PAREN . DURATIVE_ACTION_TOK $@16 NAME $@17 param_def durative_action_def_body CLOSE_PAREN
  124 derived_def: OPEN_PAREN . DERIVED_TOK $@21 derived_predicate_def adl_goal_description CLOSE_PAREN

    REQUIREMENTS_TOK     shift, and go to state 24
    TYPES_TOK            shift, and go to state 25
    CONSTANTS_TOK        shift, and go to state 26
    PREDICATES_TOK       shift, and go to state 27
    FUNCTIONS_TOK        shift, and go to state 28
    DURATIVE_ACTION_TOK  shift, and go to state 29
    ACTION_TOK           shift, and go to state 30
    DERIVED_TOK          shift, and go to state 31


state 13

    6 optional_domain_defs: CLOSE_PAREN .

    $default  reduce using rule 6 (optional_domain_defs)


state 14

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name $@2 optional_domain_defs .

    $default  reduce using rule 4 (domain_definition)


state 15

   11 optional_domain_defs: predicates_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 32
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 16

   13 optional_domain_defs: functions_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 33
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 17

    7 optional_domain_defs: require_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 34
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 18

    9 optional_domain_defs: types_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 35
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 19

    8 optional_domain_defs: constants_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 36
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 20

   10 optional_domain_defs: action_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 37
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 21

   12 optional_domain_defs: durative_action_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 38
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 22

   14 optional_domain_defs: derived_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  go to state 39
    predicates_def        go to state 15
    functions_def         go to state 16
    require_def           go to state 17
    types_def             go to state 18
    constants_def         go to state 19
    action_def            go to state 20
    durative_action_def   go to state 21
    derived_def           go to state 22


state 23

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME CLOSE_PAREN .

    $default  reduce using rule 5 (domain_name)


state 24

   27 require_def: OPEN_PAREN REQUIREMENTS_TOK . $@7 NAME $@8 require_key_star CLOSE_PAREN

    $default  reduce using rule 25 ($@7)

    $@7  go to state 40


state 25

   32 types_def: OPEN_PAREN TYPES_TOK . $@10 typed_list_name CLOSE_PAREN

    $default  reduce using rule 31 ($@10)

    $@10  go to state 41


state 26

   34 constants_def: OPEN_PAREN CONSTANTS_TOK . $@11 typed_list_name CLOSE_PAREN

    $default  reduce using rule 33 ($@11)

    $@11  go to state 42


state 27

   16 predicates_def: OPEN_PAREN PREDICATES_TOK . predicates_list $@3 CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 43

    $default  reduce using rule 17 (predicates_list)

    predicates_list  go to state 44


state 28

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK . functions_list $@5 CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 45

    $default  reduce using rule 22 (functions_list)

    functions_list  go to state 46


state 29

  114 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK . $@16 NAME $@17 param_def durative_action_def_body CLOSE_PAREN

    $default  reduce using rule 112 ($@16)

    $@16  go to state 47


state 30

   37 action_def: OPEN_PAREN ACTION_TOK . $@12 NAME $@13 param_def action_def_body CLOSE_PAREN

    $default  reduce using rule 35 ($@12)

    $@12  go to state 48


state 31

  124 derived_def: OPEN_PAREN DERIVED_TOK . $@21 derived_predicate_def adl_goal_description CLOSE_PAREN

    $default  reduce using rule 123 ($@21)

    $@21  go to state 49


state 32

   11 optional_domain_defs: predicates_def optional_domain_defs .

    $default  reduce using rule 11 (optional_domain_defs)


state 33

   13 optional_domain_defs: functions_def optional_domain_defs .

    $default  reduce using rule 13 (optional_domain_defs)


state 34

    7 optional_domain_defs: require_def optional_domain_defs .

    $default  reduce using rule 7 (optional_domain_defs)


state 35

    9 optional_domain_defs: types_def optional_domain_defs .

    $default  reduce using rule 9 (optional_domain_defs)


state 36

    8 optional_domain_defs: constants_def optional_domain_defs .

    $default  reduce using rule 8 (optional_domain_defs)


state 37

   10 optional_domain_defs: action_def optional_domain_defs .

    $default  reduce using rule 10 (optional_domain_defs)


state 38

   12 optional_domain_defs: durative_action_def optional_domain_defs .

    $default  reduce using rule 12 (optional_domain_defs)


state 39

   14 optional_domain_defs: derived_def optional_domain_defs .

    $default  reduce using rule 14 (optional_domain_defs)


state 40

   27 require_def: OPEN_PAREN REQUIREMENTS_TOK $@7 . NAME $@8 require_key_star CLOSE_PAREN

    NAME  shift, and go to state 50


state 41

   32 types_def: OPEN_PAREN TYPES_TOK $@10 . typed_list_name CLOSE_PAREN

    NAME  shift, and go to state 51

    $default  reduce using rule 104 (typed_list_name)

    typed_list_name  go to state 52


state 42

   34 constants_def: OPEN_PAREN CONSTANTS_TOK $@11 . typed_list_name CLOSE_PAREN

    NAME  shift, and go to state 51

    $default  reduce using rule 104 (typed_list_name)

    typed_list_name  go to state 53


state 43

   19 predicates_list: OPEN_PAREN . NAME typed_list_variable CLOSE_PAREN $@4 predicates_list

    NAME  shift, and go to state 54


state 44

   16 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list . $@3 CLOSE_PAREN

    $default  reduce using rule 15 ($@3)

    $@3  go to state 55


state 45

   24 functions_list: OPEN_PAREN . NAME typed_list_variable CLOSE_PAREN $@6 functions_list

    NAME  shift, and go to state 56


state 46

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list . $@5 CLOSE_PAREN

    $default  reduce using rule 20 ($@5)

    $@5  go to state 57


state 47

  114 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK $@16 . NAME $@17 param_def durative_action_def_body CLOSE_PAREN

    NAME  shift, and go to state 58


state 48

   37 action_def: OPEN_PAREN ACTION_TOK $@12 . NAME $@13 param_def action_def_body CLOSE_PAREN

    NAME  shift, and go to state 59


state 49

  124 derived_def: OPEN_PAREN DERIVED_TOK $@21 . derived_predicate_def adl_goal_description CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 60

    derived_predicate_def  go to state 61


state 50

   27 require_def: OPEN_PAREN REQUIREMENTS_TOK $@7 NAME . $@8 require_key_star CLOSE_PAREN

    $default  reduce using rule 26 ($@8)

    $@8  go to state 62


state 51

  105 typed_list_name: NAME . either name_plus CLOSE_PAREN typed_list_name
  106                | NAME . type typed_list_name
  107                | NAME . typed_list_name

    MINUS_TOK  shift, and go to state 63
    NAME       shift, and go to state 51

    $default  reduce using rule 104 (typed_list_name)

    typed_list_name  go to state 64
    type             go to state 65
    either           go to state 66


state 52

   32 types_def: OPEN_PAREN TYPES_TOK $@10 typed_list_name . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 67


state 53

   34 constants_def: OPEN_PAREN CONSTANTS_TOK $@11 typed_list_name . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 68


state 54

   19 predicates_list: OPEN_PAREN NAME . typed_list_variable CLOSE_PAREN $@4 predicates_list

    VARIABLE  shift, and go to state 69

    $default  reduce using rule 108 (typed_list_variable)

    typed_list_variable  go to state 70


state 55

   16 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list $@3 . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 71


state 56

   24 functions_list: OPEN_PAREN NAME . typed_list_variable CLOSE_PAREN $@6 functions_list

    VARIABLE  shift, and go to state 69

    $default  reduce using rule 108 (typed_list_variable)

    typed_list_variable  go to state 72


state 57

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list $@5 . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 73


state 58

  114 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK $@16 NAME . $@17 param_def durative_action_def_body CLOSE_PAREN

    $default  reduce using rule 113 ($@17)

    $@17  go to state 74


state 59

   37 action_def: OPEN_PAREN ACTION_TOK $@12 NAME . $@13 param_def action_def_body CLOSE_PAREN

    $default  reduce using rule 36 ($@13)

    $@13  go to state 75


state 60

  125 derived_predicate_def: OPEN_PAREN . predicate typed_list_variable CLOSE_PAREN

    EQUAL_TOK  shift, and go to state 76
    NAME       shift, and go to state 77

    predicate  go to state 78


state 61

  124 derived_def: OPEN_PAREN DERIVED_TOK $@21 derived_predicate_def . adl_goal_description CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 79

    adl_goal_description  go to state 80
    f_comp                go to state 81
    literal_term          go to state 82
    atomic_formula_term   go to state 83


state 62

   27 require_def: OPEN_PAREN REQUIREMENTS_TOK $@7 NAME $@8 . require_key_star CLOSE_PAREN

    NAME  shift, and go to state 84

    $default  reduce using rule 28 (require_key_star)

    require_key_star  go to state 85


state 63

  170 type: MINUS_TOK . NAME
  171 either: MINUS_TOK . OPEN_PAREN EITHER_TOK

    NAME        shift, and go to state 86
    OPEN_PAREN  shift, and go to state 87


state 64

  107 typed_list_name: NAME typed_list_name .

    $default  reduce using rule 107 (typed_list_name)


state 65

  106 typed_list_name: NAME type . typed_list_name
